--- a/UnrealProjectWithGit/Config/DefaultEngine.ini
+++ b/UnrealProjectWithGit/Config/DefaultEngine.ini
@@ -1,7 +1,17 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode="/Script/UnrealProjectWithGit.UnrealProjectWithGitGameMode"
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Dynamic/GM_Base.GM_Base_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
